[project]
name = 'deepecho'
description = 'Create sequential synthetic data of mixed types using a GAN.'
authors = [{ name = 'DataCebo, Inc.', email = 'info@sdv.dev' }]
classifiers = [
        'Development Status :: 2 - Pre-Alpha',
        'Intended Audience :: Developers',
        'License :: Free for non-commercial use',
        'Natural Language :: English',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
keywords = ['deepecho', 'DeepEcho']
dynamic = ["version"]
license = { text = 'BSL-1.1' }
requires-python = '>=3.8,<3.12'
readme = 'README.md'
dependencies = [
    "numpy>=1.20.0,<2;python_version<'3.10'",
    "numpy>=1.23.3,<2;python_version>='3.10'",
    "pandas>=1.1.3;python_version<'3.10'",
    "pandas>=1.3.4;python_version>='3.10' and python_version<'3.11'",
    "pandas>=1.5.0;python_version>='3.11'",
    "torch>=1.8.0;python_version<'3.10'",
    "torch>=1.11.0;python_version>='3.10' and python_version<'3.11'",
    "torch>=2.0.0;python_version>='3.11'",
    'tqdm>=4.15,<5',
]

[project.urls]
"Source Code"= "https://github.com/sdv-dev/Deepecho/"
"Issue Tracker" = "https://github.com/sdv-dev/Deepecho/issues"
"Twitter" = "https://twitter.com/sdv_dev"
"Chat" = "https://bit.ly/sdv-slack-invite"

[project.optional-dependencies]
test = [
    'pytest>=3.4.2',
    'pytest-cov>=2.6.0',
    'pytest-rerunfailures>=9.0.0,<10',
    'jupyter>=1.0.0,<2',
    'rundoc>=0.4.3,<0.5',
    'pytest-runner >= 2.11.1',
    'tomli>=2.0.0,<3',
]
dev = [
    'deepecho[test]',

    # general
    'setuptools<49.2',
    'bumpversion>=0.5.3,<0.6',
    'pip>=9.0.1',
    'watchdog>=0.8.3,<0.11',

    # style check
    'flake8>=3.7.7,<4',
    'flake8-absolute-import>=1.0,<2',
    'flake8-docstrings>=1.5.0,<2',
    'flake8-sfs>=0.0.3,<0.1',
    'isort>=4.3.4,<5',
    'pylint>=2.5.3,<3',
    'flake8-builtins>=1.5.3,<1.6',
    'flake8-debugger>=4.0.0,<4.1',
    'flake8-mock>=0.3,<0.4',
    'dlint>=0.11.0,<0.12',
    'flake8-eradicate>=1.1.0,<1.2',
    'flake8-mutable>=1.2.0,<1.3',
    'flake8-fixme>=1.1.1,<1.2',
    'flake8-multiline-containers>=0.0.18,<0.1',
    'flake8-quotes>=3.3.0,<4',
    'flake8-variables-names>=0.0.4,<0.1',
    'pep8-naming>=0.12.1,<0.13',
    'flake8-expression-complexity>=0.0.9,<0.1',
    'flake8-print>=4.0.0,<4.1',

    # fix style issues
    'autoflake>=1.1,<2',
    'autopep8>=1.4.3,<1.6',

    # distribute on PyPI
    'twine>=1.10.0,<4',
    'wheel>=0.30.0',

    # Advanced testing
    'coverage>=4.5.1,<6',
    'tox>=2.9.1,<4',

    # Invoking test commands
    'invoke'
]

[tool.setuptools]
include-package-data = true
license-files = ['LICENSE']

[tool.setuptools.packages.find]
include = ['deepecho', 'deepecho.*']
namespaces = false

[tool.setuptools.package-data]
"*" = [
    '*.txt',
    '*.md',
    '*.rst',
    'README.md',
    'docs/*',
    'Makefile',
    'make.bat',
    '*.jpg',
    '*.png',
    '*.gif',
]

[tool.setuptools.exclude-package-data]
"*" = [
    '* __pycache__',
    '*.py[co]',
]

[tool.setuptools.dynamic]
version = {attr = 'deepecho.version.__version__'}

[tool.isort]
include_trailing_comment = true
line_length = 99
lines_between_types = 0
multi_line_output = 4
not_skip = ['__init__.py']
use_parentheses = true

[tool.pytest.ini_options]
collect_ignore = ['pyproject.toml']

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'
